/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package org.apache.flink.formats.pb;

enum EnumCase {
    ONE     = 0;
    TWO     = 1;
    THREE   = 2;
    FOUR    = 3;
    FIVE    = 4;
}

message MessageCase {
    string stringTestInMessage          = 1;
    map<string, int32> MapTestInMessage = 2;
}

message TestPbDeserailize {
    int32 intTest                   = 1;
    int64 longTest                  = 2;
    string stringTest               = 3;
    bool boolTest                   = 4;
    double doubleTest               = 5;
    float floatTest                 = 6;
    EnumCase enumTest               = 7;
    repeated MessageCase arrayTest  = 8;
    bytes bytesTest                 = 9;
}
